# modus-take-home

./: CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: constants.py  main.py  models.py  pdf.py  service.py
backend/app/data/: mock_data.py  provider.py
backend/app/engines/: base.py  comps.py  dcf.py  last_round.py
backend/tests/: conftest.py  test_api.py  test_comps.py  test_data.py  test_dcf.py  test_last_round.py  test_models.py  test_pdf.py  test_sensitivity.py  test_service.py
docs/plans/: 2026-03-06-vc-audit-tool-design.md  2026-03-06-vc-audit-tool-implementation.md
frontend/: index.html
frontend/src/: App.tsx  api.ts  types.ts  utils.ts
frontend/src/components/: SensitivityTable.tsx  TriangulationView.tsx  ValuationForm.tsx  ValuationResults.tsx
presentation/: presentation.html  styles.css
